--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "start:dev": "cross-env NODE_ENV=development node server/index.js",
     "watch:css": "postcss styles --base styles --dir app/styles -w",
-    "build:css": "postcss styles --base styles --dir app/styles --env production"
+    "build:css": "postcss styles --base styles --dir app/styles --env production",
+    "test": "jest"
   },
   "dependencies": {
     "@remix-run/react": "^1.0.5",
@@ -28,6 +29,8 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.0",
+    "cypress": "^9.1.0",
+    "jest": "^27.3.1",
     "postcss": "^8.4.1",
     "postcss-cli": "^9.0.2",
     "tailwindcss": "^2.2.19",
