--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@remix-run/react": "^1.0.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remix": "^1.0.5",
+    "@prisma/client": "^3.5.0",
     "@remix-run/express": "^1.0.5",
+    "@remix-run/react": "^1.0.5",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "remix": "^1.0.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.0.5",
@@ -33,6 +34,7 @@
     "jest": "^27.3.1",
     "postcss": "^8.4.1",
     "postcss-cli": "^9.0.2",
+    "prisma": "^3.5.0",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.1.2"
   },
